# ai_music

./: LICENSE  Makefile  playground.ipynb  pyproject.toml
ai_music/: __init__.py
notebooks/: Generate audio.ipynb  MelSpectrograms.ipynb  SpecGan Training.ipynb  inverseFFT.ipynb  read_n_plot.ipynb
notebooks/save/specfake/: fake_275_275.pt
notebooks/save/spechist/: hist_275_275_0.pkl
